# scrapetubefzf

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  python-app.yml
src/: scrapetubefzf.py
src/scrapetubefzf/: __init__.py  __main__.py  ueberzug.py
src/scrapetubefzf/scripts/: clear.sh  download.sh  preview.sh
